--- a/assets/sass/components/checkbox.scss
+++ b/assets/sass/components/checkbox.scss
@@ -1,16 +1,22 @@
+$checkbox-size: 16px;
+
 .checkbox {
   position: relative;
-  min-width: 20px;
-  width: 20px;
+  min-width: $checkbox-size;
+  width: $checkbox-size;
 
   .box {
     display: block;
     cursor: pointer;
-    width: 20px;
-    height: 20px;
+    width: $checkbox-size;
+    height: $checkbox-size;
     border: 1px solid var(--color-border-med);
-    border-radius: 6px;
+    border-radius: 4px;
   }
+  input:checked ~ .box {
+    border-color: var(--color-success-fg);
+  }
+
   input:active ~ .box,
   input:focus ~ .box {
     border-color: var(--color-input-focus-border);
@@ -30,8 +36,8 @@
   .check {
     visibility: hidden;
     position: absolute;
-    top: 3px;
-    left: 3px;
+    top: 1px;
+    left: 1px;
   }
   input:checked ~ .check {
     visibility: visible;
