--- a/assets/sass/components/projectItem.scss
+++ b/assets/sass/components/projectItem.scss
@@ -45,7 +45,7 @@
   }
 
   .counter {
-    margin-left: $space;
+    margin: 0 $space / 2;
   }
 }
 
